# deepagents

./: .gitignore  LICENSE  Pipfile  README.md  main.py  pyproject.toml
examples/code/: .env.example  CLI_USAGE.md  README.md  coding_agent.py  coding_instructions.py  langgraph.json  local_tools.py  main.py  main_simplified.py  post_model_hook.py  requirements.txt  setup.py  state.py  subagents.py  utils.py
examples/code/examples/: example_fibonacci.py  example_quicksort.py  extended_agent.py  simple_demo.py  test_fibonacci.py
examples/code/project/: README.md  avocado.py  test_avocado.py
examples/code/projects/: main.py
examples/recruiter/: langgraph.json  recruiter_agent.py  requirements.txt
examples/research/: langgraph.json  requirements.txt  research_agent.py
src/claude_everything/: __init__.py  graph.py  prompts.py  state.py  sub_agent.py  tools.py
src/deepagent/: __init__.py  graph.py  prompts.py  state.py  sub_agent.py  tools.py
src/deepagents/: __init__.py  builder.py  graph.py  interrupt.py  local_fs_tools.py  model.py  prompts.py  real_fs_tools.py  sub_agent.py  tools.py
